--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,11 +1,3 @@
 .app {
-  min-height: 100vh;
-  padding: 40px 20px;
-  max-width: 600px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-
-  background-color: rgb(248, 216, 173);
+    padding: 0 16px;
 }
